@@ -178,17 +178,6 @@ dynamic_nodes = 0
 # Note:  net_snmp_perl_enable *must* be enabled
 mib_descriptions_enable = 0
 
-# Set to 0 to disable common escape sequences in FORMAT and EXEC lines
-# Set to 1 to enable common escape sequences in FORMAT and EXEC lines
-# The following sequences are supported:
-#   \a		alarm (bell)          (BEL)
-#   \f		form feed             (FF)
-#   \n		newline               (LF, NL)
-#   \r		return                (CR)
-#   \t		tab                   (HT, TAB)
-#
-escape_sequences_enable = 0
-
 [DaemonMode]
 # Set to 1 to have snmptt fork to the background when run in daemon mode
 # Ignored by Windows.  See documentation
